--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,51 +1,26 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
+<html>
 <head>
-   <link href='http://fonts.googleapis.com/css?family=Gudea:400,700,400italic' rel='stylesheet' type='text/css'>
-   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>Ethan Fast: {{ page.title }}</title>
-   <meta name="author" content="Ethan Fast" />
-
-
-   <!-- syntax highlighting CSS -->
-   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
-   
-
-   <!-- Homepage CSS -->
-   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
-
+  <title>TYPEDJS: {{ page.title }}</title>
+  <link href='http://fonts.googleapis.com/css?family=Gudea:400,700,400italic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Asap:400,700,400italic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
+ <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
 </head>
 <body>
-
-<div class="site">
-  <div class="title">
-     Ethan Fast <a href="/">wrote this.</a>
-  </div>
-  
-  <div id="content">
-  
-    {{ content }}
-  
-  
-    <div class="footer">
-      <div class="contact">
-        <p>
-          ejhfast@gmail.com<br />
-          ethanfast@stanford.edu
-        </p>
-      </div>
-      <div class="contact">
-        <p>
-          <a href="http://github.com/ejhfast/">github.com/ejhfast</a><br />
-          <a href="http://twitter.com/unignorant/">twitter.com/unignorant</a><br />
-        </p>
-      </div>
-    
+  <header>
+    <div class="title">
+      TYPED<span class="red">JS</span>
+      <div class="sub">Save your JavaScript</div>
     </div>
-  </div>
-  
-</div>
+  </header>
 
+{{ content }}
+
+<footer>
+</footer>
+
+</body>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -54,6 +29,7 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 var pageTracker = _gat._getTracker("UA-28634341-1");
 pageTracker._trackPageview();
 </script>
-
-</body>
 </html>
+
+
+
