--- a/css/sass/screen.scss
+++ b/css/sass/screen.scss
@@ -1,302 +1,297 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-
 @import "compass/reset";
+@import "compass/css3/gradient";
+@import "compass/css3/box-shadow";
+@import "compass/css3/border-radius";
 @import "compass/css3/text-shadow";
+@import "compass/css3/opacity";
+
+$main-width:900px;
+$pad:16px;
+$green:#31c439;
+$blue:#2929b0;
+$nav-color:#cbd7e1;
 
 
-$main-color:white;
-$red:#9b2629;
-$blue:#207785;
-$code:#4d719f;
-
-body {
-  background-color: darken($main-color,30%);
-  font-size: 14px;
-  //font-family:'Old Standard TT' serif;
-  text-align: center;
-  //font-family:'lora';
-  font-family:'Gudea';
-  
+body{
+  font-family:'Gudea','helvetica neue',helvetica;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-size: 100%;
-  font-weight:800;
-  font-family:'Gudea';
-}
-
-h1 {
-  margin-bottom: 1em;
-  font-size:1.2em;
-  color:darken($main-color,70%);
-  //font-family:'Old Standard TT';
-}
-
-p {
-  margin: 1.2em 0;
-}
-
-a {
-  @include single-text-shadow(white, 1px, 1px, 5px);
-  color: $red;
-  text-decoration:none;
-}
-
-a:hover {
-}
-
-a:visited {
-  color: $red;
-}
-
-table {
-  font-size: inherit;
-  font: 100%;
-}
-strong{
+h1,h2,h3,h4{
   font-weight:800;
 }
 
-hr{
-  border:1px solid darken($main-color,5%);
-  width:30%;
-}
-
-blockquote{
-  margin:0px 0px 0px 0px;
-  padding:0px 0px 0px 10px;
-  border-left:3px solid darken($main-color,2%);
-}
 em{
   font-style:italic;
 }
-/*****************************************************************************/
-/*
-/* Home
-/*
-/*****************************************************************************/
-
-ul.posts {
-  list-style-type: none;
-  margin-bottom: 2em;
+span.red{
+  color:#d05e4b;
+}
+span.prox{
+  font-size:.9em;
+}
+span.darkred{
+  color:#d05e4b;
+}
+p span.darkred{
+  font-weight:400;
 }
 
-  ul.posts li {
-    //line-height: 1.6em;
-    font-size:1em;
-    a{
-      font-weight:400;
+header{
+  position:relative;
+  z-index:3;
+  width:100%;
+  height:55px;
+  @include linear-gradient(black, lighten(black,20%) 33%);
+  margin:0px 0px 0px 0px;
+  font-size:14px;
+  .title{
+    width:$main-width;
+    margin:0px auto;
+    font-size:2em;
+    font-weight:800;
+    color:white;
+    padding:12px 0px;
+    img{
+      display:inline;
+      clear:none;
+    }
+    .sub{
+      //position:relative;
+      //bottom:9px;
+      font-weight:100;
+      color:darken(white,10%);
+      font-size:14px;
+      //line-height:1.8em;
+      display:inline;
+      margin:10px 0px 0px 10px;
     }
   }
-
-  ul.posts span {
-    font-size:80%;
-    color:darken($main-color,40%);
-    font-weight:200;
-    float:right;
-  }
-
-p.posts{
-  margin-bottom:2em;
 }
 
-/*****************************************************************************/
-/*
-/* Site
-/*
-/*****************************************************************************/
+#top_nav{
+  z-index:1;
+  .title{
+    width:$main-width;
+    position:relative;
+    #cloud{
+      position:absolute;
+      width:275px;
+      height:200px;
+      //left:100%;
+      top:-170px;
+      right:0px;
+      z-index:2;
+      background-image:url('/resources/cloud.png');
+      background-size:100%;
+      background-repeat:no-repeat;
+      button{
+        position:relative;
+        top:110px;
+        left:25px;
+        background:none;
+        border:none;
+        padding:8px 24px;
+        //@include border-radius(5px);
+        //        @include linear-gradient(lighten($green,15%), lighten($green,30%) 33%);
+        //@include single-text-shadow(darken(white,10%), -1px, -1px, 2px);
+        //        border:1px solid lighten($green,10%);
+        font-weight:800;
+        color:lighten(black,30%);
+        font-size:1.5em;
+      }
+    }
+    #cloud:hover{
+      @include opacity(.7);
+    }
+    h1{
+      position:relative;
+      z-index:3;
+      font-size:2.5em;
+      //top:$pad;
+      margin:1*$pad 0px;
+    }
+    span{
+      position:relative;
+      z-index:3;
+      //line-height:2.5em;
+      //font-family:'helvetica neue';
+      //color:lighten(black,20%);
+    }
+    margin:4*$pad auto 4*$pad auto;
+  }
+  width:100%;
+  padding:0px 0px $pad 0px;
+  //background-color:$nav-color;
+  @include linear-gradient(lighten($nav-color,5%), darken($nav-color,5%) 60%);
+  border-top:1px solid darken($nav-color,5%);
+  border-bottom:1px solid darken($nav-color,5%);
+  ul{
+   // font-family:'helvetica neue';
+    width:$main-width;
+    margin:0px auto;
+    font-weight:800;
+    color:lighten(black,20%);
+    li{
+      font-size:.8em;
+      display:inline;
+      margin:0px .5*$pad 0px 0px;
+      padding:$pad 2*$pad;
+      background-color:lighten($nav-color,10%); //lighten($nav-color,10%);
+      //border-top:1px solid darken($nav-color,5%);
+      //border-right:1px solid darken($nav-color,5%);
+      //border-bottom:1px solid darken($nav-color,5%);
+    }
+    li#selected{
+      background-color:white; //lighten($nav-color,10%);
+      border-top:1px solid darken($nav-color,5%);
+      border-right:1px solid darken($nav-color,5%);
+      border-left:1px solid darken($nav-color,5%);
+      border-bottom:none;
+      color:black;
+    }
+    li:hover{
+      background-color:darken($nav-color,10%);
+    }
+  }
+}
+
+.clear{
+  clear:both;
+}
 
 #content{
-  width:30em;
-  width: 30em;
-  font-size: 110%;
-  text-align: left;
-  margin: 3em auto 2em auto;
-  line-height: 1.5em;
-}
-.site {
-  width: 60em;
-  text-align: left;
-  margin: 3em auto 2em auto;
-  line-height: 1.5em;
-  background-color:$main-color;
-}
-
-.title {
-  width:100%;
-  font-size:1.7em;
-  font-family:'helvetica neue',helvetica;
-  font-weight:200;
-  margin-top:0em;
-  text-align:center;
-  color:darken($main-color,70%);
-  padding:60px 0px;
-  border-bottom:1px solid darken($main-color,10%);
-  a {
-    color: $red;
-    text-decoration: none;
+  width:$main-width;
+  margin:(2*$pad) auto;
+  .sec + .sec{
+    margin-top:2em;
   }
-  a:hover {
-    color: black;
-  }
-  
-}
-.big{
-  font-size:1.5em;
-}
-.about{
-  margin-bottom: 40px;
-  color:darken(white,100%);
-  font-weight:200;
-  a{
-    font-weight:800;
-  }
-}
-  .site h1{
-  }
-  .site ul{
-    list-style-position:outside;
-    margin-bottom:2em;
-  }
-  .site li{
-    //margin:1px 0px;
-  }
-
-  .site .meta {
-    color: #aaa;
-    font-size:1em;
-  }
-
-  .site .footer {
-    font-size: 80%;
-    color: #666;
-    margin-top: 2em;
-    padding-bottom:2em;
-    overflow: hidden;
-    font-weight:200;
-  }
-
-    .site .footer .contact {
-      float: left;
-      margin-right: 3em;
-    }
-
-      .site .footer .contact a {
-        color: $blue;
+  .sec{
+    h1{
+      font-size:2em;
+      span.num{
+        font-size:1.5em;
+        color:lighten(black,70%);
+        margin:0px 10px 0px 0px;
       }
-
-    .site .footer .rss {
-      margin-top: 1.1em;
-      margin-right: -.2em;
-      float: right;
     }
-
-      .site .footer .rss img {
-        border: 0;
+    .half,.full{
+      margin:2*$pad 4% 0px 0px;
+      display:block;
+      width:46%;
+      float:left;
+      img{
+        max-width:94%;
+        padding:3%;
+        background-color:darken(white,5%);
+        border:1px solid darken(white,10%);
       }
-
-/*****************************************************************************/
-/*
-/* Posts
-/*
-/*****************************************************************************/
-
-#post {
-  width:100%;
-  margin:0px auto;
-  strong{
-    font-weight:800;
+      h1{
+        font-size:1.1em;
+        font-weight:800;
+        margin:0px 0px $pad 0px;
+      }
+      p{
+        font-size:1.1em;
+        line-height:1.6em;
+      }
+      textarea{
+        width:96%;
+        padding:2%;
+        height:400px;
+        border:1px solid darken(white,10%);
+        font-size:1em;
+      }
+      button{
+        display:inline;
+        border:none;
+        font-size:1.1em;
+        padding:15px;
+        @include border-radius(5px);
+        background-color:$green;
+        font-weight:800;
+        color:white;
+      }
+      button:hover{
+        @include opacity(.7);
+      }
+    }
+  .full{
+    width:90%;
+    margin:2*$pad 0% 0px 0px;
   }
-
+  }
 }
-#post{
-  //float:left;
-  margin:40px 0px;
+
+#block_content{
+  width:56%;
+  float:left;
+  margin:0px 6% 0px 0px;
   h1{
-    color:darken($main-color,70%);
-    margin:0px;
-    text-align:center;
+    font-size:2.5em;
   }
-  p{
-    //font-family:'Lora';
-    //font-size:1.1em;
-    line-height:1.6em;
-  }
-  p.footnote{
-    color:darken($main-color,50%);
-  }
-  p.meta{
-    //font-family:'Old Standard TT';
-    font-size:.8em;
-    font-weight:100;
-    margin-bottom:3em;
-    margin-top:.5em;
-    font-family:'Gudea';
-    text-align:center;
-
+  #description{
+    p{
+      line-height:1.6;
+      font-weight:400;
+      margin:$pad 0px;
+    }
     
   }
-  p.scene{
-    color:darken($main-color,30%);
-    font-size:1.2em;
-    font-weight:100;
-  }
-  #fn1{
-    margin-top:3em;
-  }
-
 }
 
-  /* standard */
-
-  #post pre {
-    border: 1px solid lighten($code,45%);
-    background-color: lighten($code,50%);
-    padding: .2em .6em;
+#block_side{
+  width:37%;
+  float:left;
+  //border:1px solid darken(white, 20%);
+  h1{
+    font-size:1.5em;
   }
-
-  #post ul,
-  #post ol {
-    list-style-type:disc;
-    //font-family:georgia;
-    //margin:20px 0px;
-    li{
-      //margin:10px 0px;
+  #funding,#watchers,#posted,#followers,#supporters,#days{
+    margin:0px 0px 2*$pad 0px;
+    .num{
+      font-size:2.4em;
+      font-weight:800;
+    }
+    .title{
+      margin:7px 0px;
+      font-weight:800;
     }
   }
-  #post ol{
-    list-style-type:decimal;
+  #posted .title{
+    color:lighten(black,40%);
   }
-
-  #post code {
-    border: 1px solid #ddd;
-    background-color: #eef;
-    font-size: 95%;
-    padding: 0 .2em;
-  }
-
-    #post pre code {
-      border: none;
+  #support{
+    margin:0px 0px 2*$pad 0px;
+    button{
+      display:inline;
+      border:none;
+      font-size:.8em;
+      padding:15px;
+      @include border-radius(5px);
+      background-color:$green;
+      font-weight:800;
+      color:white;
     }
-
-  /* terminal */
-
-  #post pre.terminal {
-    border: 1px solid darken($main-color,70%);
-    background-color: darken($main-color,60%);
-    color: darken($main-color,10%);
+    button:hover{
+      background-color:lighten($green,10%);
+    }
   }
-
-  #post pre.terminal code {
-  }
-
-#related {
-  margin-top: 2em;
 }
 
-  #related h2 {
-    margin-bottom: 1em;
-  }
+.square{
+  @include linear-gradient(darken(white,8%), darken(white, 10%) 60%);
+  float:left;
+  width:90%;
+  display:block;
+  padding:2*$pad $pad 0px $pad;
+  background-color:darken(white,10%);
+  //@include single-text-shadow(white, 1px, 1px, 1px);
+  margin:0px 0px 1px 0px;
+}
+
+footer{
+  width:100%;
+  @include linear-gradient(lighten(black,30%), lighten(black,20%) 60%);
+  height:200px;
+  
+}
