--- a/css/screen.css
+++ b/css/screen.css
@@ -1,7 +1,3 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 /* line 17, ../../../.rvm/gems/ruby-1.9.2-p290@taazr/gems/compass-0.12.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -69,311 +65,344 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 /* line 15, sass/screen.scss */
 body {
-  background-color: #b3b3b3;
-  font-size: 14px;
-  text-align: center;
-  font-family: 'Gudea';
+  font-family: 'Gudea','helvetica neue',helvetica;
 }
 
-/* line 25, sass/screen.scss */
-h1, h2, h3, h4, h5, h6 {
-  font-size: 100%;
-  font-weight: 800;
-  font-family: 'Gudea';
-}
-
-/* line 31, sass/screen.scss */
-h1 {
-  margin-bottom: 1em;
-  font-size: 1.2em;
-  color: #4d4d4d;
-}
-
-/* line 38, sass/screen.scss */
-p {
-  margin: 1.2em 0;
-}
-
-/* line 42, sass/screen.scss */
-a {
-  text-shadow: white 1px 1px 5px;
-  color: #9b2629;
-  text-decoration: none;
-}
-
-/* line 51, sass/screen.scss */
-a:visited {
-  color: #9b2629;
-}
-
-/* line 55, sass/screen.scss */
-table {
-  font-size: inherit;
-  font: 100%;
-}
-
-/* line 59, sass/screen.scss */
-strong {
+/* line 19, sass/screen.scss */
+h1, h2, h3, h4 {
   font-weight: 800;
 }
 
-/* line 63, sass/screen.scss */
-hr {
-  border: 1px solid #f2f2f2;
-  width: 30%;
-}
-
-/* line 68, sass/screen.scss */
-blockquote {
-  margin: 0px 0px 0px 0px;
-  padding: 0px 0px 0px 10px;
-  border-left: 3px solid #fafafa;
-}
-
-/* line 73, sass/screen.scss */
+/* line 23, sass/screen.scss */
 em {
   font-style: italic;
 }
 
-/*****************************************************************************/
-/*
-/* Home
-/*
-/*****************************************************************************/
-/* line 82, sass/screen.scss */
-ul.posts {
-  list-style-type: none;
-  margin-bottom: 2em;
+/* line 26, sass/screen.scss */
+span.red {
+  color: #d05e4b;
 }
 
-/* line 87, sass/screen.scss */
-ul.posts li {
-  font-size: 1em;
+/* line 29, sass/screen.scss */
+span.prox {
+  font-size: .9em;
 }
-/* line 90, sass/screen.scss */
-ul.posts li a {
+
+/* line 32, sass/screen.scss */
+span.darkred {
+  color: #d05e4b;
+}
+
+/* line 35, sass/screen.scss */
+p span.darkred {
   font-weight: 400;
 }
 
-/* line 95, sass/screen.scss */
-ul.posts span {
-  font-size: 80%;
-  color: #999999;
-  font-weight: 200;
-  float: right;
-}
-
-/* line 102, sass/screen.scss */
-p.posts {
-  margin-bottom: 2em;
-}
-
-/*****************************************************************************/
-/*
-/* Site
-/*
-/*****************************************************************************/
-/* line 112, sass/screen.scss */
-#content {
-  width: 30em;
-  width: 30em;
-  font-size: 110%;
-  text-align: left;
-  margin: 3em auto 2em auto;
-  line-height: 1.5em;
-}
-
-/* line 120, sass/screen.scss */
-.site {
-  width: 60em;
-  text-align: left;
-  margin: 3em auto 2em auto;
-  line-height: 1.5em;
-  background-color: white;
-}
-
-/* line 128, sass/screen.scss */
-.title {
+/* line 39, sass/screen.scss */
+header {
+  position: relative;
+  z-index: 3;
   width: 100%;
-  font-size: 1.7em;
-  font-family: 'helvetica neue',helvetica;
-  font-weight: 200;
-  margin-top: 0em;
-  text-align: center;
-  color: #4d4d4d;
-  padding: 60px 0px;
-  border-bottom: 1px solid #e6e6e6;
+  height: 55px;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(33%, #333333), color-stop(100%, #000000));
+  background-image: -webkit-linear-gradient(#333333 33%, #000000);
+  background-image: -moz-linear-gradient(#333333 33%, #000000);
+  background-image: -o-linear-gradient(#333333 33%, #000000);
+  background-image: -ms-linear-gradient(#333333 33%, #000000);
+  background-image: linear-gradient(#333333 33%, #000000);
+  margin: 0px 0px 0px 0px;
+  font-size: 14px;
 }
-/* line 138, sass/screen.scss */
-.title a {
-  color: #9b2629;
-  text-decoration: none;
+/* line 47, sass/screen.scss */
+header .title {
+  width: 900px;
+  margin: 0px auto;
+  font-size: 2em;
+  font-weight: 800;
+  color: white;
+  padding: 12px 0px;
 }
-/* line 142, sass/screen.scss */
-.title a:hover {
-  color: black;
+/* line 54, sass/screen.scss */
+header .title img {
+  display: inline;
+  clear: none;
+}
+/* line 58, sass/screen.scss */
+header .title .sub {
+  font-weight: 100;
+  color: #e6e6e6;
+  font-size: 14px;
+  display: inline;
+  margin: 10px 0px 0px 10px;
 }
 
-/* line 147, sass/screen.scss */
-.big {
+/* line 71, sass/screen.scss */
+#top_nav {
+  z-index: 1;
+  width: 100%;
+  padding: 0px 0px 16px 0px;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(60%, #bbcbd8), color-stop(100%, #dbe3ea));
+  background-image: -webkit-linear-gradient(#bbcbd8 60%, #dbe3ea);
+  background-image: -moz-linear-gradient(#bbcbd8 60%, #dbe3ea);
+  background-image: -o-linear-gradient(#bbcbd8 60%, #dbe3ea);
+  background-image: -ms-linear-gradient(#bbcbd8 60%, #dbe3ea);
+  background-image: linear-gradient(#bbcbd8 60%, #dbe3ea);
+  border-top: 1px solid #bbcbd8;
+  border-bottom: 1px solid #bbcbd8;
+}
+/* line 73, sass/screen.scss */
+#top_nav .title {
+  width: 900px;
+  position: relative;
+  margin: 64px auto 64px auto;
+}
+/* line 76, sass/screen.scss */
+#top_nav .title #cloud {
+  position: absolute;
+  width: 275px;
+  height: 200px;
+  top: -170px;
+  right: 0px;
+  z-index: 2;
+  background-image: url("/resources/cloud.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+/* line 87, sass/screen.scss */
+#top_nav .title #cloud button {
+  position: relative;
+  top: 110px;
+  left: 25px;
+  background: none;
+  border: none;
+  padding: 8px 24px;
+  font-weight: 800;
+  color: #4d4d4d;
   font-size: 1.5em;
 }
-
-/* line 150, sass/screen.scss */
-.about {
-  margin-bottom: 40px;
-  color: black;
-  font-weight: 200;
+/* line 103, sass/screen.scss */
+#top_nav .title #cloud:hover {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
+  opacity: 0.7;
 }
-/* line 154, sass/screen.scss */
-.about a {
-  font-weight: 800;
+/* line 106, sass/screen.scss */
+#top_nav .title h1 {
+  position: relative;
+  z-index: 3;
+  font-size: 2.5em;
+  margin: 16px 0px;
 }
-
-/* line 160, sass/screen.scss */
-.site ul {
-  list-style-position: outside;
-  margin-bottom: 2em;
+/* line 113, sass/screen.scss */
+#top_nav .title span {
+  position: relative;
+  z-index: 3;
 }
-
-/* line 168, sass/screen.scss */
-.site .meta {
-  color: #aaa;
-  font-size: 1em;
-}
-
-/* line 173, sass/screen.scss */
-.site .footer {
-  font-size: 80%;
-  color: #666;
-  margin-top: 2em;
-  padding-bottom: 2em;
-  overflow: hidden;
-  font-weight: 200;
-}
-
-/* line 182, sass/screen.scss */
-.site .footer .contact {
-  float: left;
-  margin-right: 3em;
-}
-
-/* line 187, sass/screen.scss */
-.site .footer .contact a {
-  color: #207785;
-}
-
-/* line 191, sass/screen.scss */
-.site .footer .rss {
-  margin-top: 1.1em;
-  margin-right: -0.2em;
-  float: right;
-}
-
-/* line 197, sass/screen.scss */
-.site .footer .rss img {
-  border: 0;
-}
-
-/*****************************************************************************/
-/*
-/* Posts
-/*
-/*****************************************************************************/
-/* line 207, sass/screen.scss */
-#post {
-  width: 100%;
+/* line 128, sass/screen.scss */
+#top_nav ul {
+  width: 900px;
   margin: 0px auto;
-}
-/* line 210, sass/screen.scss */
-#post strong {
   font-weight: 800;
+  color: #333333;
+}
+/* line 134, sass/screen.scss */
+#top_nav ul li {
+  font-size: .8em;
+  display: inline;
+  margin: 0px 8px 0px 0px;
+  padding: 16px 32px;
+  background-color: #ebf0f4;
+}
+/* line 144, sass/screen.scss */
+#top_nav ul li#selected {
+  background-color: white;
+  border-top: 1px solid #bbcbd8;
+  border-right: 1px solid #bbcbd8;
+  border-left: 1px solid #bbcbd8;
+  border-bottom: none;
+  color: black;
+}
+/* line 152, sass/screen.scss */
+#top_nav ul li:hover {
+  background-color: #abbece;
 }
 
-/* line 215, sass/screen.scss */
-#post {
-  margin: 40px 0px;
+/* line 158, sass/screen.scss */
+.clear {
+  clear: both;
 }
-/* line 218, sass/screen.scss */
-#post h1 {
-  color: #4d4d4d;
-  margin: 0px;
-  text-align: center;
+
+/* line 162, sass/screen.scss */
+#content {
+  width: 900px;
+  margin: 32px auto;
 }
-/* line 223, sass/screen.scss */
-#post p {
+/* line 165, sass/screen.scss */
+#content .sec + .sec {
+  margin-top: 2em;
+}
+/* line 169, sass/screen.scss */
+#content .sec h1 {
+  font-size: 2em;
+}
+/* line 171, sass/screen.scss */
+#content .sec h1 span.num {
+  font-size: 1.5em;
+  color: #b3b3b3;
+  margin: 0px 10px 0px 0px;
+}
+/* line 177, sass/screen.scss */
+#content .sec .half, #content .sec .full {
+  margin: 32px 4% 0px 0px;
+  display: block;
+  width: 46%;
+  float: left;
+}
+/* line 182, sass/screen.scss */
+#content .sec .half img, #content .sec .full img {
+  max-width: 94%;
+  padding: 3%;
+  background-color: #f2f2f2;
+  border: 1px solid #e6e6e6;
+}
+/* line 188, sass/screen.scss */
+#content .sec .half h1, #content .sec .full h1 {
+  font-size: 1.1em;
+  font-weight: 800;
+  margin: 0px 0px 16px 0px;
+}
+/* line 193, sass/screen.scss */
+#content .sec .half p, #content .sec .full p {
+  font-size: 1.1em;
   line-height: 1.6em;
 }
-/* line 228, sass/screen.scss */
-#post p.footnote {
-  color: gray;
+/* line 197, sass/screen.scss */
+#content .sec .half textarea, #content .sec .full textarea {
+  width: 96%;
+  padding: 2%;
+  height: 400px;
+  border: 1px solid #e6e6e6;
+  font-size: 1em;
 }
-/* line 231, sass/screen.scss */
-#post p.meta {
-  font-size: .8em;
-  font-weight: 100;
-  margin-bottom: 3em;
-  margin-top: .5em;
-  font-family: 'Gudea';
-  text-align: center;
+/* line 204, sass/screen.scss */
+#content .sec .half button, #content .sec .full button {
+  display: inline;
+  border: none;
+  font-size: 1.1em;
+  padding: 15px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
+  background-color: #31c439;
+  font-weight: 800;
+  color: white;
 }
+/* line 214, sass/screen.scss */
+#content .sec .half button:hover, #content .sec .full button:hover {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
+  opacity: 0.7;
+}
+/* line 218, sass/screen.scss */
+#content .sec .full {
+  width: 90%;
+  margin: 32px 0% 0px 0px;
+}
+
+/* line 225, sass/screen.scss */
+#block_content {
+  width: 56%;
+  float: left;
+  margin: 0px 6% 0px 0px;
+}
+/* line 229, sass/screen.scss */
+#block_content h1 {
+  font-size: 2.5em;
+}
+/* line 233, sass/screen.scss */
+#block_content #description p {
+  line-height: 1.6;
+  font-weight: 400;
+  margin: 16px 0px;
+}
+
 /* line 242, sass/screen.scss */
-#post p.scene {
-  color: #b3b3b3;
-  font-size: 1.2em;
-  font-weight: 100;
+#block_side {
+  width: 37%;
+  float: left;
 }
-/* line 247, sass/screen.scss */
-#post #fn1 {
-  margin-top: 3em;
+/* line 246, sass/screen.scss */
+#block_side h1 {
+  font-size: 1.5em;
 }
-
-/* standard */
+/* line 249, sass/screen.scss */
+#block_side #funding, #block_side #watchers, #block_side #posted, #block_side #followers, #block_side #supporters, #block_side #days {
+  margin: 0px 0px 32px 0px;
+}
+/* line 251, sass/screen.scss */
+#block_side #funding .num, #block_side #watchers .num, #block_side #posted .num, #block_side #followers .num, #block_side #supporters .num, #block_side #days .num {
+  font-size: 2.4em;
+  font-weight: 800;
+}
 /* line 255, sass/screen.scss */
-#post pre {
-  border: 1px solid #e1e8f0;
-  background-color: #f2f5f9;
-  padding: .2em .6em;
+#block_side #funding .title, #block_side #watchers .title, #block_side #posted .title, #block_side #followers .title, #block_side #supporters .title, #block_side #days .title {
+  margin: 7px 0px;
+  font-weight: 800;
 }
-
-/* line 262, sass/screen.scss */
-#post ul,
-#post ol {
-  list-style-type: disc;
+/* line 260, sass/screen.scss */
+#block_side #posted .title {
+  color: #666666;
 }
-
-/* line 270, sass/screen.scss */
-#post ol {
-  list-style-type: decimal;
+/* line 263, sass/screen.scss */
+#block_side #support {
+  margin: 0px 0px 32px 0px;
 }
-
-/* line 274, sass/screen.scss */
-#post code {
-  border: 1px solid #ddd;
-  background-color: #eef;
-  font-size: 95%;
-  padding: 0 .2em;
+/* line 265, sass/screen.scss */
+#block_side #support button {
+  display: inline;
+  border: none;
+  font-size: .8em;
+  padding: 15px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
+  background-color: #31c439;
+  font-weight: 800;
+  color: white;
+}
+/* line 275, sass/screen.scss */
+#block_side #support button:hover {
+  background-color: #54d45b;
 }
 
 /* line 281, sass/screen.scss */
-#post pre code {
-  border: none;
+.square {
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(60%, #e6e6e6), color-stop(100%, #ebebeb));
+  background-image: -webkit-linear-gradient(#e6e6e6 60%, #ebebeb);
+  background-image: -moz-linear-gradient(#e6e6e6 60%, #ebebeb);
+  background-image: -o-linear-gradient(#e6e6e6 60%, #ebebeb);
+  background-image: -ms-linear-gradient(#e6e6e6 60%, #ebebeb);
+  background-image: linear-gradient(#e6e6e6 60%, #ebebeb);
+  float: left;
+  width: 90%;
+  display: block;
+  padding: 32px 16px 0px 16px;
+  background-color: #e6e6e6;
+  margin: 0px 0px 1px 0px;
 }
 
-/* terminal */
-/* line 287, sass/screen.scss */
-#post pre.terminal {
-  border: 1px solid #4d4d4d;
-  background-color: #666666;
-  color: #e6e6e6;
-}
-
-/* line 296, sass/screen.scss */
-#related {
-  margin-top: 2em;
-}
-
-/* line 300, sass/screen.scss */
-#related h2 {
-  margin-bottom: 1em;
+/* line 292, sass/screen.scss */
+footer {
+  width: 100%;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(60%, #333333), color-stop(100%, #4d4d4d));
+  background-image: -webkit-linear-gradient(#333333 60%, #4d4d4d);
+  background-image: -moz-linear-gradient(#333333 60%, #4d4d4d);
+  background-image: -o-linear-gradient(#333333 60%, #4d4d4d);
+  background-image: -ms-linear-gradient(#333333 60%, #4d4d4d);
+  background-image: linear-gradient(#333333 60%, #4d4d4d);
+  height: 200px;
 }
